# complit2023

./: LICENSE  README.md  reproduction_instructions.md  user_instructions  user_instructions.md
code/: get_concordances.py  process_barplots.py  process_categories.py  process_data.py  process_piecharts.py  pyproject.toml
data/: common_swears.csv  example_query.txt  swears-csv.csv
